Updated: Config for 1wire dallas sensor and ota settings following breaking changes in esphome 2024.7

--- a/esphome/d1mini-motion-seb.yaml
+++ b/esphome/d1mini-motion-seb.yaml
@@ -26,14 +26,16 @@ logger:
 api:
 
 ota:
+  - platform: esphome
 
-dallas:
+one_wire:
   - pin: D3
-    update_interval: 600s
+    platform: gpio
   
 sensor:
-  - platform: dallas
+  - platform: dallas_temp
     address: 0x760119500218FF28
+    update_interval: 600s
     name: "${friendly_name} Temperature"
     filters:
       - calibrate_linear:
