--- a/esphome/d1mini-motion-reu.yaml
+++ b/esphome/d1mini-motion-reu.yaml
@@ -4,7 +4,7 @@ esphome:
   board: d1_mini
 
 wifi:
-  ssid: !secret wifi_iot_ssid
+  ssid: !secret wifi_ssid
   password: !secret wifi_password
   domain: ".lan"
   
@@ -26,13 +26,15 @@ logger:
 api:
 
 ota:
+  - platform: esphome
 
-dallas:
+one_wire:
   - pin: D3
-    update_interval: 600s
+    platform: gpio
   
 sensor:
-  - platform: dallas
+  - platform: dallas_temp
+    update_interval: 600s
     address: 0x9401187D0BC7FF28
     name: "${friendly_name} Temperature"
     filters:
